tests/baselines/reference/commaOperatorWithSecondOperandStringType.errors.txt
commaOperatorWithSecondOperandStringType.ts(10,6): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(11,1): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(11,10): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(12,1): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(12,9): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(13,1): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(13,9): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(14,1): error TS2454: Variable 'OBJECT' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(14,9): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(17,29): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(18,24): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(18,33): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(19,24): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(19,32): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(20,24): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(20,32): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(21,24): error TS2454: Variable 'OBJECT' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(21,32): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(24,7): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(25,19): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(27,1): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(28,13): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(29,22): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(31,30): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(32,42): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(34,24): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(35,37): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorWithSecondOperandStringType.ts(36,37): error TS2454: Variable 'STRING' is used before being assigned.


==== commaOperatorWithSecondOperandStringType.ts (28 errors) ====
    var ANY: any;
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    var OBJECT: Object;
    
    var resultIsString: string;
    
    //The second operand is string
    ANY, STRING;
         ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    BOOLEAN, STRING;
    ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
             ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    NUMBER, STRING;
    ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
            ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    STRING, STRING;
    ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
            ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    OBJECT, STRING;
    ~~~~~~
!!! error TS2454: Variable 'OBJECT' is used before being assigned.
            ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    
    //Return type is string
    var resultIsString1 = (ANY, STRING);
                                ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    var resultIsString2 = (BOOLEAN, STRING);
                           ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
                                    ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    var resultIsString3 = (NUMBER, STRING);
                           ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
                                   ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    var resultIsString4 = (STRING, STRING);
                           ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
                                   ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    var resultIsString5 = (OBJECT, STRING);
                           ~~~~~~
!!! error TS2454: Variable 'OBJECT' is used before being assigned.
                                   ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    
    //Literal and expression
    null, STRING;
          ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    ANY = new Date(), STRING;
                      ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    true, "";
    BOOLEAN == undefined, "";
    ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    ["a", "b"], NUMBER.toString();
                ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    OBJECT = new Object, STRING + "string";
                         ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    
    var resultIsString6 = (null, STRING);
                                 ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    var resultIsString7 = (ANY = new Date(), STRING);
                                             ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    var resultIsString8 = (true, "");
    var resultIsString9 = (BOOLEAN == undefined, "");
                           ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    var resultIsString10 = (["a", "b"], NUMBER.toString());
                                        ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    var resultIsString11 = (new Object, STRING + "string");
                                        ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    